[project]
name = "astrofeed_lib"
version = "0.0.5"
description = "Common functions for working with the Astronomy feeds, including the database and feed spec."  # Optional
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {file = "LICENSE"}
keywords = ["bluesky", "astronomy"]
authors = [
  {name = "Emily L. Hunt", email = "emily.hunt.physics@gmail.com" } # Optional
]
maintainers = [
  {name = "Emily L. Hunt", email = "emily.hunt.physics@gmail.com" } # Optional
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "peewee>=3.16.2,<4.0",
  "pymysql>=1.1.0,<2.0",  # If using a MySQL database
  "atproto==0.0.55",
  "emoji>=2.8.0,<3.0",
  "websockets>=13.0"  # Has a faster async implementation than others
]

[project.urls]
"Homepage" = "https://astronomy.blue/"
"Bug Reports" = "https://github.com/bluesky-astronomy/astrofeed-lib"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
