[project]
name = "astrofeed_firehose" # Required
version = "0.0.1" # Required
description = "The Bluesky firehose consumer for the Astronomy feeds."
readme = "README.md" # Optional
requires-python = ">=3.12,<3.13"
license = { file = "LICENSE" }
keywords = ["bluesky", "astronomy"]
authors = [
  { name = "Emily L. Hunt", email = "emily.hunt.physics@gmail.com" }, # Optional
]
maintainers = [
  { name = "Emily L. Hunt", email = "emily.hunt.physics@gmail.com" }, # Optional
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "astrofeed_lib",
    "icecream>=2.1.3",
    "uvloop>=0.20",
    "faster-fifo"
]

[tool.uv.sources]
astrofeed_lib = { git = "https://github.com/bluesky-astronomy/astrofeed-lib", branch = "main" }
#astrofeed_lib = {  path = "../astrofeed-lib", editable=true }

[project.urls]
"Homepage" = "https://astronomy.blue/"
"Bug Reports" = "https://github.com/bluesky-astronomy/astronomy-feeds"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
