[project]
name = "astronomy_feeds" # Required
version = "0.1.0" # Required
description = "The Python implementation that powers the Astronomy feeds on Bluesky."
readme = "README.md" # Optional
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
keywords = ["bluesky", "astronomy"]
authors = [
  { name = "Emily L. Hunt", email = "emily.hunt.physics@gmail.com" }, # Optional
]
maintainers = [
  { name = "Emily L. Hunt", email = "emily.hunt.physics@gmail.com" }, # Optional
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# Please try to list dependencies by project!
dependencies = [
  # astrofeed_lib
  "peewee>=3.16.2,<4.0",
  "pymysql>=1.1.0,<2.0", # If using a MySQL database
  "atproto==0.0.55",
  "emoji>=2.8.0,<3.0", 
  "websockets>=13.0",

  # astrofeed_firehose
  "uvloop>=0.20", # Has a faster async implementation than others
  "faster-fifo>=1.5.2,<2.0",

  # astrofeed_server
  "Flask>=2.3.2,<3.0",
  "gunicorn>=20.1.0,",

  # astrobot
  # (none)
]

[project.optional-dependencies]
dev_db = [
  "pandas>=2.0,<3" # If (re-)building the developer database
]
test = ["pytest"]

[project.urls]
"Homepage" = "https://astronomy.blue/"
"Bug Reports" = "https://github.com/bluesky-astronomy/astronomy-feeds"

[tool.pytest.ini_options]
pythonpath = "/home/vince/work/astrosky/dev/astronomy-feeds/.venv/bin/python"
addopts = ["--import-mode=importlib"]
testpaths = ["/home/vince/work/astrosky/dev/astronomy-feeds/tests"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
